--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -23,12 +23,12 @@ environment:
     APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
     APPVEYOR_JOB_NAME: clangcl-ninja-64
     BUILD_TYPE: Debug
-    CMAKE_ARGS: -DCMAKE_C_COMPILER=clang-cl.exe -DCMAKE_CXX_COMPILER=clang-cl.exe -DCMAKE_FLAGS="-m64"
+    CMAKE_ARGS: -DCMAKE_C_COMPILER=clang-cl.exe -DCMAKE_CXX_COMPILER=clang-cl.exe
     GENERATOR: Ninja
     VCVARS: C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvarsall.bat
     VCVARSARG: amd64
     PATH: C:\Program Files\LLVM\bin;C:\msys64\mingw64\bin;%PATH%;C:\Windows\System32
-    LIB_PATH: C:\Program Files (x86)\Windows Kits\10\Redist\ucrt\DLLs\architecture;C:\Program Files (x86)\Windows Kits\10\bin\architecture\ucrt;C:\Program Files (x86)\Windows Kits\10\Redist\ucrt\DLLs\x64
+    LIB_SUFFIX: C:\Program Files (x86)\Windows Kits\10\Redist\ucrt\DLLs\architecture;C:\Program Files (x86)\Windows Kits\10\bin\architecture\ucrt;C:\Program Files (x86)\Windows Kits\10\Redist\ucrt\DLLs\x64
     PACMAN_PACKAGES: "mingw-w64-x86_64-ninja"
     CLANG_URL: https://github.com/llvm/llvm-project/releases/download/llvmorg-10.0.0/LLVM-10.0.0-win64.exe
   
@@ -41,10 +41,10 @@ environment:
     BUILD_TYPE: Debug
     GENERATOR: MinGW Makefiles
     VULKAN: true
-    PATH: C:\mingw64\bin;C:\mingw64\x86_64-w64-mingw32\lib;C:\mingw64\x86_64-w64-mingw32\include;%APPVEYOR_BUILD_FOLDER%\deps\bin;%PATH%;C:\Windows\System32
-    LIB_PATH: C:\Program Files (x86)\Windows Kits\10\Redist\ucrt\DLLs\architecture;C:\Program Files (x86)\Windows Kits\10\bin\architecture\ucrt;C:\Program Files (x86)\Windows Kits\10\Redist\ucrt\DLLs\x64
-    INCLUDE: C:\mingw64\x86_64-w64-mingw32\include;%INCLUDE%
-    LIB: C:\mingw64\x86_64-w64-mingw32\lib;%LIB%
+    PATH: C:\mingw64\bin;%PATH%;C:\Windows\System32
+    INCLUDE_PREFIX: C:\mingw64\x86_64-w64-mingw32\include
+    LIB_PREFIX: C:\mingw64\x86_64-w64-mingw32\lib
+    LIB_SUFFIX: C:\Program Files (x86)\Windows Kits\10\Redist\ucrt\DLLs\architecture;C:\Program Files (x86)\Windows Kits\10\bin\architecture\ucrt;C:\Program Files (x86)\Windows Kits\10\Redist\ucrt\DLLs\x64
     MINGW_URL: http://downloads.sourceforge.net/mingw-w64/x86_64-8.1.0-release-posix-seh-rt_v6-rev0.7z
   
   # MSVC-VS2019 x86_64 / C++17
@@ -85,7 +85,7 @@ environment:
 install:
   # ---- set environment ----
   - if defined VCVARS call "%VCVARS%" %VCVARSARG%
-  - set PATH=C:\Python38-x64;C:\Python38-x64\Scripts;%PATH%
+  - set PATH=C:\Python38-x64;C:\Python38-x64\Scripts;%APPVEYOR_BUILD_FOLDER%\deps\bin;%PATH%
  
   # ---- Vulkan install ----
   #- if defined VULKAN call _scripts/ci/install_vulkan.bat
@@ -105,9 +105,13 @@ install:
   - if defined CLANG_URL if not exist C:\llvm-installer.exe appveyor-retry appveyor DownloadFile %CLANG_URL% -FileName C:\llvm-installer.exe
   - if defined CLANG_URL START /WAIT C:\llvm-installer.exe /S /D=C:\"Program Files\LLVM"
  
+  # ---- set libraries + remove git from path (conflicts with cmake) ----
   - set PATH=%PATH:C:\Program Files\Git\usr\bin;=%
-  - if defined LIB_PATH set PATH=%PATH%;%LIB_PATH%
-  - if defined LIB_PATH set LIB=%LIB%;%LIB_PATH%
+  - if defined INCLUDE_PREFIX set INCLUDE=%INCLUDE_PREFIX%;%INCLUDE%
+  - if defined LIB_PREFIX set LIB=%LIB_PREFIX%;%LIB%
+  - if defined LIB_PREFIX set PATH=%LIB_PREFIX%;%PATH%
+  - if defined LIB_SUFFIX set LIB=%LIB%;%LIB_SUFFIX%
+  - if defined LIB_SUFFIX set PATH=%PATH%;%LIB_SUFFIX%
 
 build_script:
   # ---- project version + build directory ----
