infra-cwork: custom cmake framework: add macro to set file language properties

--- a/hardware/CMakeLists.txt
+++ b/hardware/CMakeLists.txt
@@ -39,6 +39,7 @@ endif()
 autodetect_source_files("${CMAKE_CURRENT_SOURCE_DIR}/src" "*.[hcm]*")
 if(CWORK_AUTODETECTED_FILES)
     set(_SOURCE_FILES)
+    set(_OBJC_SOURCE_FILES "")
     foreach(_file ${CWORK_AUTODETECTED_FILES})
         foreach(_ignored ${_HARDWARE_IGNORED_EXT})
             if(_file MATCHES ".*${_ignored}$")
@@ -49,7 +50,7 @@ if(CWORK_AUTODETECTED_FILES)
         if(NOT _IGNORED_FILE)
             set(_SOURCE_FILES ${_SOURCE_FILES} ${_file})
             if(APPLE AND _file MATCHES ".*\\.m$")
-                set_source_files_properties(${_file} PROPERTIES LANGUAGE C)
+                set(_OBJC_SOURCE_FILES ${_OBJC_SOURCE_FILES} ${_file})
             endif()
         else()
             unset(_IGNORED_FILE)
@@ -58,6 +59,9 @@ if(CWORK_AUTODETECTED_FILES)
     unset(CWORK_AUTODETECTED_FILES)
     
     cwork_set_source_files(${_SOURCE_FILES})
+    if(APPLE AND NOT _OBJC_SOURCE_FILES STREQUAL "")
+        cwork_set_source_language(C, ${_OBJC_SOURCE_FILES})
+    endif()
 endif()
 
 # ┌──────────────────────────────────────────────────────────────────┐
